language/move-lang/tests/move_check/borrows/borrow_field_full_invalid.exp
error[E07001]: referential transparency violated
   ┌─ tests/move_check/borrows/borrow_field_full_invalid.move:14:18
   │
13 │         let c = copy inner;
   │                 ---------- It is still being mutably borrowed by this reference
14 │         let f1 = &inner.f1;
   │                  ^^^^^^^^^ Invalid immutable borrow at field 'f1'.

error[E07001]: referential transparency violated
   ┌─ tests/move_check/borrows/borrow_field_full_invalid.move:23:18
   │
22 │         let c = id_mut(copy inner);
   │                 ------------------ It is still being mutably borrowed by this reference
23 │         let f1 = &inner.f1;
   │                  ^^^^^^^^^ Invalid immutable borrow at field 'f1'.

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/borrow_field_full_invalid.move:32:18
   │
31 │         let c = copy inner;
   │                 ---------- It is still being mutably borrowed by this reference
32 │         let f1 = &mut inner.f1;
   │                  ^^^^^^^^^^^^^ Invalid mutable borrow at field 'f1'.

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/borrow_field_full_invalid.move:41:18
   │
40 │         let c = id_mut(copy inner);
   │                 ------------------ It is still being mutably borrowed by this reference
41 │         let f1 = &mut inner.f1;
   │                  ^^^^^^^^^^^^^ Invalid mutable borrow at field 'f1'.

